# email-ai-classifier

./: .env.example  .gitignore  Dockerfile  GCP_SETUP.md  README.md  package-lock.json  package.json  pyproject.toml
app/: config.py  main.py
app/api/: classify.py  partials.py
app/prompts/: email_classifier.prompt  email_responder.prompt
app/services/: classifier.py  responder.py
app/templates/: 404.html  base.html  index.html
app/templates/partials/: error_display.html  file_upload.html  footer_info.html  header.html  input_method_toggle.html  input_wrapper.html  loading_state.html  process_button.html  result_display.html  text_input.html  toaster.html
app/utils/: preprocess.py  text_extractor.py
static/: index.html  script.js  styles.css
static/css/: globals.css  tailwind.css
static/js/: toast.js
tests/: conftest.py
tests/integration/: test_classifier_integration.py  test_frontend_smoke.py  test_full_pipeline.py
tests/integration/api/: test_classify_integration.py
tests/integration/services/: test_classifier_integration.py  test_responder_integration.py
tests/unit/api/: test_classify_unit.py
tests/unit/services/: test_classifier.py  test_responder.py
tests/unit/utils/: test_preprocess.py  test_preprocess_numbers.py  test_preprocess_tokenize.py  test_text_extractor.py
tests/utils/: test_preprocess.py  test_text_extractor.py
