[project]
name = "email-ai-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pdfminer-six>=20260107",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
